--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title> What You Need</title>
+<title> REACh </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -313,17 +313,13 @@ color:#ccccff;
 <div class="span5 offset3 order">
 
 <div class="page-header">
-        <h1>I need this </h1>
+        <h1> REACH </h1>
   </div>
 <br>
 </div>
 
 <div class="row-fluid pitch" >
 <div class="span5 offset3 order">
-<h2>Live trend</h2>
-<div id="piechart_3d" style="width: 750px; height: 400px;"></div>
-</div>
-</div>
 
 <div class="row-fluid faq">
 <div class="span10 offset1">
