--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@ $(function(){
 <body>
     <div id="ui">
         <form>
-            <input id="textinput" placeholder="chat box" />
+            <input id="textinput" placeholder="chat box" / size = 35>
             <button>send</button>
         </form>
-        <span id="onlinecount">1 online</span>
     </div>
     <div id="messages"></div>
 
