--- a/index.html
+++ b/index.html
@@ -1,56 +1,366 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Chat Room</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<meta charset="utf-8">
+<title> REACH </title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+<style>
 
-<script src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+div.background
+{
+  width: 500px;
+  height: 250px;
+  background: url(klematis.jpg) repeat;
+  border: 2px solid black;
+}
+div.transbox
+{
+  width: 400px;
+  height: 180px;
+  margin: 30px 50px;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity:0.6;
+  filter:alpha(opacity=60); /* For IE8 and earlier */
+}
+div.transbox p
+{
+  margin: 30px 40px;
+  font-weight: bold;
+  color: #000000;
+}
+
+.resizedTextbox {width: 300px; height: 35px}
+    /* CUSTOMIZE THE NAVBAR
+    -------------------------------------------------- */
+ 
+    /* Special class on .container surrounding .navbar, used for positioning it into place. */
+    .navbar-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 4;
+      margin-top: 10px;
+      margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+   
+
+
+ }
+    .navbar-wrapper .navbar {
+ 
+    }
+ 
+    /* Remove border and change up box shadow for more contrast */
+    .navbar .navbar-inner {
+      border: 0;
+      -webkit-box-shadow: 0 2px 10px rgba(25,0,0,.25);
+         -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
+              box-shadow: 0 2px 10px rgba(0,0,0,.25);
+    }
+ 
+    /* Downsize the brand/project name a bit */
+    .navbar .brand {
+      padding: 14px 20px 16px; /* Increase vertical padding to match navbar links */
+      font-size: 16px;
+      font-weight: bold;
+      text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+    }
+ 
+    /* Navbar links: increase padding for taller navbar */
+    .navbar .nav > li > a {
+      padding: 15px 20px;
+    }
+ 
+    /* Offset the responsive button for proper vertical alignment */
+    .navbar .btn-navbar {
+      margin-top: 5px;
+    }
+ 
+ 
+ 
+    /* CUSTOMIZE THE CAROUSEL
+    -------------------------------------------------- */
+ 
+    /* Carousel base class */
+    .carousel {
+      margin-bottom: 10px;
+    }
+ 
+    .carousel .container {
+      position: relative;
+      z-index: 9;
+    }
+ 
+    .carousel-control {
+      height: 60px;
+      margin-top: 0;
+      font-size: 120px;
+      text-shadow: 0 1px 1px rgba(0,0,0,.4);
+      background-color: transparent;
+      border: 0;
+      z-index: 10;
+    }
+ 
+    .carousel .item {
+      height: 500px;
+    }
+    .carousel img {
+      position: absolute;
+      top: 0;
+      left: 50;
+      min-width: 100%;
+      height: 500px;
+    }
+ 
+    .carousel-caption {
+      background-color: transparent;
+      position: static;
+      max-width: 1000px;
+      padding: 0 20px;
+      margin-top: 200px;
+    }
+    .carousel-caption h1,
+    .carousel-caption .lead {
+      margin: 0;
+      line-height: 0.75;
+      color: #fff;
+      text-shadow: 0 1px 1px rgba(0,0,0,1.0);
+    }
+    .carousel-caption .btn {
+      margin-top: 8 px;
+    }
+ 
+ @media (max-width: 979px) {
+ 
+      .container.navbar-wrapper {
+        margin-bottom: 0;
+        width: auto;
+      }
+      .navbar-inner {
+        border-radius: 0;
+        margin: -20px 0;
+      }
+ 
+      .carousel .item {
+        height: 500px;
+      }
+      .carousel img {
+        width: auto;
+        height: 500px;
+      }
+    }
+ 
+ 
+    @media (max-width: 767px) {
+ 
+      .navbar-inner {
+        margin: -20px;
+      }
+ 
+      .carousel {
+        margin-left: -20px;
+        margin-right: -20px;
+      }
+      .carousel .container {
+ 
+      }
+      .carousel .item {
+        height: 300px;
+      }
+      .carousel img {
+        height: 300px;
+      }
+      .carousel-caption {
+        width: 65%;
+        padding: 0 70px;
+        margin-top: 100px;
+      }
+      .carousel-caption h1 {
+        font-size: 30px;
+      }
+      .carousel-caption .lead,
+      .carousel-caption .btn {
+        font-size: 18px;
+      }
+    }
+
+
+body {
+  font-family:'Open Sans',Helvetica,Arial,sans-serif;
+}
+
+.heading,.subheading {
+  font-family:'Ubuntu',Helvetica,Arial,sans-serif;
+  text-align:center;  
+}
+
+p.lead {
+     padding-top: 1.5%;
+      font-size:24px;
+      line-height:30Px; 
+}
+
+p {
+    font-size:18px;
+    line-height: 24px; 
+}
+
+.pitch {
+    padding:2.5% 0%;
+      }
+.order {
+      padding:2% 0%;
+      }
+.actions {
+       background-color: #454545;
+       padding:1% 0%; 
+     }
+.video,.thermometer,.order,.social,.statistics {
+ text-align: center;
+}
+.statistics h3,.statistics p {
+  color:white;
+}
+
+.copy {
+     padding-top: 1.5%;
+     padding-bottom:2.5%;
+     text-align: justify; 
+}
+.asset {
+      padding: 0.5% 0%;
+}
+
+.footer {
+    color: #cccccc;
+    text-align:center;
+}
+.footer p {
+   font size:11px;
+}
+ 
+.footer a {
+color:#ccccff;
+}
+
+
+</style>
 <script type="text/javascript">
-var socket = io.connect('/');
-socket.on('from server', function (data) {
-    console.log(data);
-    if (data.message) {
-        //document.write(data.message);
-        $("#messages").append("<div>" + data.message + "</div>");
-    }
-    if (data.online) {
-        console.info("online:", data.online);
-        $("#onlinecount").html(data.online + " online");
-    }
-});
 
-$(function(){
-    $("#ui button").on("click", function(e){
-        var message = $("#textinput").val();
-        socket.emit('from client', { message: message });
-        $("#textinput").val("").focus();
-        $("#messages").append("<div class='ownmessage'>" + message + "</div>");
-        e.preventDefault();
-    });
-    $("#textinput").focus();
-});
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-39997508-2']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
 
-<style>
-    form {display:inline-block;}
-    body {font-family:sans-serif;}
+</script>
+<SCRIPT LANGUAGE="JavaScript">
+ function WTF(form) {
 
-    #onlinecount {font-size:small; color:#999;}
-    #messages {color:#444; font-size:11px;}
-    #messages .ownmessage {font-weight:bold;}
-</style>
-
+       alert("Perfect !!!. We value your input and will reach you shortly at " + form.mail.value + " Share us on Facebook and Twitter " );     
+     }
+  </SCRIPT>
 </head>
-
 <body>
-    <div id="ui">
-        <form>
-            <input id="textinput" placeholder="chat box" / size = 35>
-            <button>send</button>
-        </form>
+ <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+	      <div class="nav-collapse collapse">
+              <ul class="nav">
+              <li class="active"><a href="#"><h4> Home </h4> </a></li>
+              <li><a href="About.html"><h4> Disaster Mgmt </h4></a></li>
+              <li><a href="Info.html"><h4> Visuals </h4></a></li>
+              <li><a href="Visuals.html"><h4> Prediction </h4></a></li>
+              
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
     </div>
-    <div id="messages"></div>
 
+
+
+<div class="container">
+<div class="row-fluid heading" >
+<div class="span12">
+<br>
+<br>
+<br><br>
+
+<br>
+</div>
+</div>
+</div>
+    
+<div class="row-fluid pitch">
+<div class="span5 offset3 order">
+
+<div class="page-header">
+        <h1> REACH </h1>
+  </div>
+<br>
+</div>
+
+<div class="row-fluid pitch" >
+<div class="span5 offset3 order">
+
+<div class="row-fluid faq">
+<div class="span10 offset1">
+<div class="accordion" id="accordion2">
+<div class="accordion-group">
+<div class="accordion-heading">
+<a class="accordion-toggle" data-toggle="collapse"
+</a>
+<div id="collapseOne" class="accordion-body collapse">
+<div class="accordion-inner">
+</div>
+</div>  
+
+</div>
+</div>
+</div>
+</div>
+
+
+
+<div class="row-fluid footer">
+<div class="span12">
+<p> This is licensed work under the 
+<a href="http://creativecommons.org/licenses/by-sa/3.0/" > CC By-SA 3.0 </a>,
+</p>
+</div>
+</div>
+</div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39997508-2', 'herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
+
+
+
+
