--- a/index.html
+++ b/index.html
@@ -318,6 +318,16 @@ color:#ccccff;
 <br>
 </div>
 
+<form NAME="formname" " ACTION="/" METHOD="POST" enctype="application/x-www-form-urlencoded" class="navbar-form">
+
+<input type="text" class="form-control input-lg"  name="sel" placeholder="Elaborate your selection" autofocus>
+
+<button class="btn btn-default btn-lg btn-primary" type="submit" size="" >Submit</button>
+</div>
+<br>
+
+</form>
+
 <div class="row-fluid pitch" >
 <div class="span5 offset3 order">
 
