--- a/index.html
+++ b/index.html
@@ -318,18 +318,18 @@ color:#ccccff;
 <br>
 </div>
 
+
+<div class="row-fluid pitch" >
+<div class="span5 offset3 order">
 <form NAME="formname" " ACTION="/" METHOD="POST" enctype="application/x-www-form-urlencoded" class="navbar-form">
 
-<input type="text" class="form-control input-lg"  name="sel" placeholder="Elaborate your selection" autofocus>
-
+<input type="text" class="form-control input-lg"  name="sel" placeholder="Enter your Pin or let me find" autofocus>
+<br>
 <button class="btn btn-default btn-lg btn-primary" type="submit" size="" >Submit</button>
 </div>
 <br>
 
 </form>
-
-<div class="row-fluid pitch" >
-<div class="span5 offset3 order">
 
 <div class="row-fluid faq">
 <div class="span10 offset1">
