--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@ color:#ccccff;
 <div class="span5 offset3 order">
 <form NAME="formname" " ACTION="/" METHOD="POST" enctype="application/x-www-form-urlencoded" class="navbar-form">
 
-<input type="text" class="form-control input-lg"  name="sel" placeholder="Enter your Pin or let me find" autofocus>
+<input type="text" class="form-control input-lg"  name="sel" placeholder="Enter Pincode / Allow Bot to find" autofocus>
+<br>
 <br>
 <button class="btn btn-default btn-lg btn-primary" type="submit" size="" >Submit</button>
 </div>
