--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@ color:#ccccff;
 <div class="span5 offset3 order">
 <form NAME="formname" " ACTION="/" METHOD="POST" enctype="application/x-www-form-urlencoded" class="navbar-form">
 
-<input type="text" class="form-control input-lg"  name="sel" placeholder="Enter Pincode / Let me find your location" autofocus>
+<input type="text" class="form-control input-lg"  name="sel" placeholder="Type Pincode / Let Bot do it" autofocus>
 <br>
 <br>
-<button class="btn btn-default btn-lg btn-primary" type="Fetch" size="" >Submit</button>
+<button class="btn btn-default btn-lg btn-primary" type="Submit" size="" >Fetch</button>
 </div>
 <br>
 
