--- a/index.html
+++ b/index.html
@@ -285,9 +285,6 @@ color:#ccccff;
 	      <div class="nav-collapse collapse">
               <ul class="nav">
               <li class="active"><a href="#"><h4> Home </h4> </a></li>
-              <li><a href="About.html"><h4> Disaster Mgmt </h4></a></li>
-              <li><a href="Info.html"><h4> Visuals </h4></a></li>
-              <li><a href="Visuals.html"><h4> Prediction </h4></a></li>
               
             </ul>
           </div><!--/.nav-collapse -->
@@ -313,7 +310,7 @@ color:#ccccff;
 <div class="span5 offset3 order">
 
 <div class="page-header">
-        <h1> REACH </h1>
+        <h1> Reach -> Find Hospitals in a click </h1>
   </div>
 <br>
 </div>
