--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ color:#ccccff;
 <div class="span5 offset3 order">
 
 <div class="page-header">
-        <h1> Reach -> Find Hospitals in a click </h1>
+        <h1> Reach </h1>
   </div>
 <br>
 </div>
