--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ color:#ccccff;
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script>
-	var socket = io.connect('http://' + document.location.host);
+	var socket = io.connect('http://agile-eyrie-9352.herokuapp.com');
 
 	// on connection to server, ask for user's name with an anonymous callback
 	socket.on('connect', function(){
