--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ color:#ccccff;
 
 
 </style>
-<script src="/socket.io/socket.io.js"></script>
+<script src="http://agile-eyrie-9352.herokuapp.com/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script>
 	var socket = io.connect('http://agile-eyrie-9352.herokuapp.com');
