--- a/infob.html
+++ b/infob.html
@@ -27,9 +27,7 @@
               <div class="nav-collapse collapse">
               <ul class="nav">
               <li class="active"><a href="http://agile-eyrie-9352.herokuapp.com"><h4> Home </h4> </a></li>
-              <li><a href="About.html"><h4> Disaster Mgmt </h4></a></li>
-              <li><a href="Info.html"><h4> Visuals </h4></a></li>
-              <li><a href="Visuals.html"><h4> Prediction </h4></a></li>  
+              <li><a href="About.html"><h4> About </h4></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
