--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@ color:#ccccff;
 	      <div class="nav-collapse collapse">
               <ul class="nav">
               <li class="active"><a href="#"><h4> Home </h4> </a></li>
-              
+              <li><a href="About.html"><h4> About </h4></a></li>
+ 
             </ul>
           </div><!--/.nav-collapse -->
         </div>
