--- a/About.html
+++ b/About.html
@@ -82,10 +82,10 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
           'chartType': 'PieChart',
           'containerId': 'chart1',
           'options': {
-            'width': 600,
-            'height': 600,
+            'width': 400,
+            'height': 400,
             'legend': 'none',
-            'title': 'Donuts eaten per person',
+            'title': 'Beds per state',
             'chartArea': {'left': 15, 'top': 15, 'right': 0, 'bottom': 0},
             'pieSliceText': 'label'
           },
@@ -125,7 +125,7 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
             <div id="control2"></div>
             <div id="control3"></div>
           </td>
-          <td style='width: 600px'>
+          <td style='width: 900px'>
             <div style="float: left;" id="chart1"></div>
             <div style="float: left;" id="chart2"></div>
             <div style="float: left;" id="chart3"></div>
