--- a/pred.html
+++ b/pred.html
@@ -12,38 +12,38 @@
         data.addColumn('number', 'Deaths');
         data.addRows([
           ['Diarrhoeal', new Date (2000,6,1), 8870507, 2918 ],
-          ['Malaria',new Date (2000,5,1), 788,  617],
-          ['Respiaratory',new Date (2000,4,1), 788,  617],
+          ['Malaria',new Date (2000,5,1), 2031790, 931  ],
+          ['Respiaratory',new Date (2000,4,1), 0,0 ],
           [ 'Encephalitis',new Date (2000,3,1), 788,  617],
           [ 'Hepatitis',new Date (2000,2,1), 788,  617],   
 
           ['Diarrhoeal', new Date (2002,6,1), 9289558, 2787  ],
-          ['Malaria',new Date (2002,5,1), 788,  617],
-          ['Respiaratory',new Date (2002,4,1), 788,  617],
+          ['Malaria',new Date (2002,5,1), 1842019 ,973],
+          ['Respiaratory',new Date (2002,4,1),0,0 ],
           [ 'Encephalitis',new Date (2002,3,1), 788,  617],
           [ 'Hepatitis',new Date (2002,2,1), 788,  617],
 
           ['Diarrhoeal', new Date (2004,6,1),10510476,4709],
-          ['Malaria',new Date (2004,5,1), 788,  617],
-          ['Respiaratory',new Date (2004,4,1), 788,  617],
+          ['Malaria',new Date (2004,5,1),1915363,949 ],
+          ['Respiaratory',new Date (2004,4,1),25571757,5223 ],
           [ 'Encephalitis',new Date (2004,3,1), 788,  617],
           [ 'Hepatitis',new Date (2004,2,1), 788,  617],
 
           ['Diarrhoeal', new Date (2006,6,1), 10079263 , 3124],
-          ['Malaria',new Date (2006,5,1), 788,  617],
-          ['Respiaratory',new Date (2006,4,1), 788,  617],
+          ['Malaria',new Date (2006,5,1),1785129 ,1707],
+          ['Respiaratory',new Date (2006,4,1), 25807722,3467],
           [ 'Encephalitis',new Date (2006,3,1), 788,  617],
           [ 'Hepatitis',new Date (2006,2,1), 788,  617],
          
           ['Diarrhoeal', new Date (2008,6,1), 11408666,2865],
-          ['Malaria',new Date (2008,5,1), 788,  617],
-          ['Respiaratory',new Date (2008,4,1), 788,  617],
+          ['Malaria',new Date (2008,5,1), 1526210 ,1055  ],
+          ['Respiaratory',new Date (2008,4,1),27451421,5321 ],
           [ 'Encephalitis',new Date (2008,3,1), 788,  617],
           [ 'Hepatitis',new Date (2008,2,1), 788,  617],
 
           ['Diarrhoeal', new Date (2010,6,1), 10112845,1388],
-          ['Malaria',new Date (2010,5,1), 788,  617],
-          ['Respiaratory',new Date (2010,4,1), 788,  617],
+          ['Malaria',new Date (2010,5,1), 1373317 , 678 ],
+          ['Respiaratory',new Date (2010,4,1), 24720144,2612 ],
           [ 'Encephalitis',new Date (2010,3,1), 788,  617],
           [ 'Hepatitis',new Date (2010,2,1), 788,  617] 
   
