--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@ color:#ccccff;
               <li class="active"><a href="#"><h4> Home </h4> </a></li>
               <li><a href="About.html"><h4> Disaster mgmt </h4></a></li>
               <li><a href="pred.html"><h4> Prediction </h4></a></li>
+		 <li><a href="chat.html"><h4> chat </h4></a></li>
  
             </ul>
           </div><!--/.nav-collapse -->
